# ppc-2025-processes-informatics

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  check_ci_fixed.sh  local_ci_check.sh  ppc-2025-processes-informatics.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: mac.yml  nightly.yml
scripts/: run_tests.py
tasks/: CMakeLists.txt
tasks/agafonov_i_sentence_count/: info.json  report.md
tasks/agafonov_i_torus_grid/: info.json  report.md
tasks/akimov_i_radix_sort_double_batcher_merge/: info.json  report.md
tasks/akimov_i_star/: info.json  report.md
tasks/akimov_i_words_string_count/: info.json  report.md
tasks/ashihmin_d_calculate_integrals_by_simpson/: info.json  report.md
tasks/ashihmin_d_scatter_trans_from_one_to_all/: info.json  report.md
tasks/ashihmin_d_sum_of_elem/: info.json  report.md
tasks/baldin_a_gauss_filter/: info.json  report.md
tasks/baldin_a_my_scatter/: info.json  report.md
tasks/baldin_a_word_count/: info.json  report.md
tasks/chaschin_v_broadcast/: info.json  (+1 more)
tasks/gusev_d_sentence_count/: CMakeLists.txt  info.json  report.md
tasks/gusev_d_sentence_count/common/include/: common.hpp
tasks/gusev_d_sentence_count/data/: holy-bible.txt
tasks/gusev_d_sentence_count/mpi/include/: ops_mpi.hpp
tasks/gusev_d_sentence_count/mpi/src/: ops_mpi.cpp
tasks/gusev_d_sentence_count/seq/include/: ops_seq.hpp
tasks/gusev_d_sentence_count/seq/src/: ops_seq.cpp
tasks/gusev_d_sentence_count/tests/functional/: main.cpp
tasks/gusev_d_sentence_count/tests/performance/: main.cpp
(+1949 files in other folders)
